# Advent-of-Code-2024

./: .gitignore
day1/: .gitignore  CMakeLists.txt  common.cpp  common.ixx  problem1.cpp  problem2.cpp
day1/problem1/: .gitignore  CMakeLists.txt  main.cpp
day2/: .gitignore  day2.sln
day2/common/: InputUtils.cs  SafetyValidator.cs
day2/part1/: Program.cs
day2/part2/: Program.cs  part2.csproj
day3/: .gitignore  parser.py  part1.py  part2.py
day4/: .gitignore  pom.xml
day4/src/main/java/proj/retro/: Grid.java  Part1.java  Part2.java  Point.java
day5/: .gitignore  PageOrdering.cs  Program.cs  day5.sln
day6/: CMakeLists.txt  grid.cpp  grid.ixx  part1.cpp  part2.cpp
day7/: pom.xml
day7/src/main/java/proj/retro/: Combinator.java  InputReader.java  NumberInput.java  Operator.java  Part1.java  Part2.java
